--- a/Session 3.Rmd
+++ b/Session 3.Rmd
@@ -66,13 +66,13 @@ Importing Excel Files (XLSX):
 
 ### Checking Imported Data:
 
-After importing the data, it's a good idea to examine it using functions like `head()`, `summary()`, or `str()`.
+After importing the data, it's a good idea to examine it using functions like `glimpse()`, `slice()`, or `str()`.
 
     # Display the first few rows
-    head(data)
+    slice(data, 1:5)
     
-    # Get summary statistics
-    summary(data)
+    # Get summary of the variables
+    glimpse(data)
     
     # Display the structure of the data
     str(data)
@@ -88,7 +88,7 @@ Practice importing datasets by going to [https://github.com/menawhalen/R-Short-C
 
 ## Joins
 
-In the tidyverse, joining two datasets together is a way to combine data from different sources based on common variables. This is similar to joining tables in a relational database or using VLOOKUP in spreadsheet software. The dplyr package within the tidyverse provides functions to perform these joins.
+In the tidyverse, joining two datasets together is a way to combine data from different sources based on common variables. The dplyr package within the tidyverse provides functions to perform these joins.
 
 ### Inner Join
 
@@ -208,7 +208,8 @@ summary_right <- nyc_dests_right %>%
   summarize(num_airports = n())
 
 summary_full <- nyc_dests_full %>%
-  summarize(num_rows = n(), num_airports = sum(!is.na(name)))
+  summarize(num_rows = n(), 
+            num_airports = sum(!is.na(name)))
 
 # Display the summaries
 summary_inner
@@ -255,6 +256,62 @@ emp_df %>%
 ```
 
 
+## Pivots
+
+Data often comes in various formats, and its structure might not be ideal for the task at hand. Pivoting helps you reorganize your data to a format that makes it easier to analyze, visualize, or model. For example, you might need to pivot data to:
+
+* Perform Aggregations: Pivoting can simplify data aggregation and summary calculations. You can consolidate multiple columns into one and apply functions like mean, sum, etc.
+
+* Create Visualizations: Some visualizations require specific data structures. Pivoting can help organize data to generate meaningful visualizations like time series plots, heatmaps, or faceted graphs.
+
+* Fit Models: Certain modeling techniques might require data in a specific shape. Pivoting can help transform data into a format suitable for predictive modeling or statistical analysis.
+
+### Pivot Longer
+The `pivot_longer()` function is used to convert data from a wide format (with multiple columns) into a long format (fewer columns). It's particularly useful when you have variables spread across different columns and you want to stack them into a single column, often with corresponding values.
+
+    pivot_longer(data, cols, names_to, values_to)
+
+* data: The input data frame.
+* cols: Columns to pivot into longer format.
+* names_to: The name of the column that will store the column names from the original wide format.
+* values_to: The name of the column that will store the values from the original wide format.
+
+### Pivot Wider
+The `pivot_wider()` function is used to convert data from a long format to a wide format. It's useful when you want to take distinct values from a column and spread them across new columns.
+
+    pivot_wider(data, names_from, values_from)
+    
+* data: The input data frame.
+* names_from: The column that contains the unique values to be transformed into column names in the wide format.
+* values_from: The column that contains the values to be spread across the new wide-format columns.
+
+```{r pivoting}
+# Sample data
+data_wide <- data.frame(
+  country = c("USA", "Canada"),
+  `2018` = c(250, 180),
+  `2019` = c(260, 190),
+  `2020` = c(270, 200)
+)
+
+# Using pivot_longer to reshape data
+data_wide %>%
+  pivot_longer(cols = -country, names_to = "year", values_to = "value")
+
+# Sample data
+data_long <- data.frame(
+  country = c("USA", "Canada"),
+  year = rep(c("2018", "2019", "2020"), each = 2),
+  value = c(250, 260, 270, 180, 190, 200)
+)
+# Using pivot_wider to reshape data
+data_long %>%
+  pivot_wider(names_from = year, values_from = value)
+
+```
+
+Since we are working with a lot of datasets from the Tidyverse these datasets are already in the tidy format and thus pivoting is not needed. But once you combine dataset together there can be options to summarise new variables and thus could lead to pivoting.
+
 ## On your own..
 
 Answer the following questions either in the exercise below or in your R script
@@ -264,6 +321,7 @@ Answer the following questions either in the exercise below or in your R script
 3. Which airlines had the highest average departure delays from each airport?
 4. What is the distribution of flight distances for flights departing from each airport?
 5. Which airlines operated the most flights from each airport in NYC?
+6. Create a dataset where each airline is a row and each column is a month (1-12) to see which is the busiest months for each airline.
 
 ```{r join_ex, exercise = TRUE}
 ## Q1
